--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,11 +1,13 @@
 spring:
   datasource:
-    url: jdbc:mariadb://localhost:3306/meubanco
+    url: jdbc:mariadb://127.0.0.1:3306/quadrokaban
     username: devuser
     password: devpass
     driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none # <--- importante!
     show-sql: true
     database-platform: org.hibernate.dialect.MariaDBDialect
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
