docs: atualiza README com padrão MariaDB, exemplos de configuração e instruções completas
- Define MariaDB como banco padrão para todos os ambientes (dev, prod, CI/CD)
- Adiciona exemplos de configuração para MariaDB e Docker Compose
- Explica uso opcional do H2 para testes rápidos
- Detalha execução do projeto, perfis e comandos úteis
- Atualiza seção de CI/CD com GitHub Actions
- Lista endpoints REST, regras de negócio e arquitetura do projeto
- Atualiza roadmap e principais alterações recentes
- Melhora instruções para novos usuários e colaboradores

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,11 +1,13 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/minha_base_prod
-    username: postgres
-    password: senha_prod
-    driver-class-name: org.postgresql.Driver
+    url: jdbc:mariadb://127.0.0.1:3306/quadrokaban
+    username: devuser
+    password: devpass
+    driver-class-name: org.mariadb.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none # <--- importante!
     show-sql: false
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.MariaDBDialect
+  liquibase:
+    change-log: classpath:db/changelog/db.changelog-master.yaml
