fix(ci): adiciona permissão de execução ao gradlew no workflow

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -30,6 +30,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
+      - name: Permitir execução do Gradle Wrapper
+        run: chmod +x ./gradlew
+
       - name: Build e Testes
         run: ./gradlew clean build test
 
