--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,13 +53,15 @@ jobs:
       - name: Esperar o MariaDB subir
         run: |
           for i in {1..30}; do
-            nc -z localhost 3306 && echo "MariaDB está pronto!" && exit 0
+            nc -z mariadb 3306 && echo "MariaDB está pronto!" && exit 0
             echo "Aguardando MariaDB subir..."
             sleep 2
           done
           echo "MariaDB não subiu a tempo." && exit 1
 
       - name: Build e Testes
+        env:
+          SPRING_PROFILES_ACTIVE: ci
         run: ./gradlew clean build test
 
       - name: Publicar resultados de testes
